# mnn2mem

./: .gitmodules  CMakeLists.txt  README.md  build.sh  mnet.hpp  mnet.mnn  mnn2mem.cpp  mnn2mem.sh
example/: CMakeLists.txt  example.cpp
tool/: CMakeLists.txt
